# noise-test

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  configure.ac
.github/workflows/: makefile.yml
examples/: MainTestSuite.cpp  MainTestSuite.h  README.md  SimpleTestSuite1.cpp  SimpleTestSuite1.h  SimpleTestSuite2.cpp  SimpleTestSuite2.h  example.cpp
man/: Makefile.am  noisetest.1
src/: AssertException.cpp  AssertException.h  Assertion.cpp  Assertion.h  Colors.h  Logger.cpp  Logger.h  Makefile.am  UnitTest.cpp  UnitTest.h  UnitTestFunction.h  UnitTestSuite.cpp  UnitTestSuite.h  main.cpp
